# Bank_Widget

./: .flake8  .gitignore  README.md  main.py  pyproject.toml
src/: processing.py  widget.py
src/masks/: __init__.py  masks.py
tests/: test_processing.py
