[tool.poetry]
name = "bank-widget"
version = "0.1.0"
description = "Bank widget for masking card and account numbers"
authors = ["Student"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.lint.dependencies]
flake8 = "^7.0.0"
black = "^24.0.0"
isort = "^5.13.0"
mypy = "^1.8.0"

[tool.black]
line-length = 119
exclude = ".git"

[tool.isort]
line_length = 119
force_single_line = true

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = ["venv"]
mypy_path = "."

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"